--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,9 @@ flutter:
   #  - images/a_dot_ham.jpeg
 
   assets:
-      - assets/zenstones.mp4
+      - assets/videos/zenstones.mp4
+      - assets/images/icon-headphones.png
+      - assets/images/icon-meditation-bowl.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
