--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,10 @@ dependencies:
 
   video_player: 0.8.0
 
+  path_provider: 0.4.1
+
+  flutter_circular_chart: 0.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
