--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
 
   path_provider: 0.4.1
 
-  flutter_circular_chart: 0.1.0
+  event_bus: 1.0.1
 
 dev_dependencies:
   flutter_test:
