--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
 
   path_provider: 0.4.1
 
+  device_info: 0.4.0
+
   event_bus: 1.0.1
 
 dev_dependencies:
@@ -52,6 +54,7 @@ flutter:
       - assets/images/icon-home.png
       - assets/images/icon-headphones.png
       - assets/images/icon-meditation-bowl.png
+      - assets/images/video-placeholder.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
