--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,10 @@ dependencies:
 
   event_bus: 1.0.1
 
+  audioplayers: 0.8.0
+
+  sqflite: 1.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -55,6 +59,13 @@ flutter:
       - assets/images/icon-headphones.png
       - assets/images/icon-meditation-bowl.png
       - assets/images/video-placeholder.jpg
+      - assets/audio/bell-strike-1.mp3
+      - assets/audio/bell-strike-2.mp3
+      - assets/audio/bell-strike-3.mp3
+      - assets/audio/bell-reminder-1.mp3
+      - assets/audio/bell-reminder-2.mp3
+      - assets/audio/bell-resonance-1.mp3
+      - assets/audio/bell-resonance-2.mp3
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
