--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,7 @@ description: Simple Meditation
 # Both the version and the builder number may be overridden in flutter
 # build by specifying --build-name and --build-number, respectively.
 # Read more about versioning at semver.org.
-version: 1.0.0+1
+version: 0.6.0
 
 environment:
   sdk: ">=2.0.0-dev.68.0 <3.0.0"
@@ -31,6 +31,8 @@ dependencies:
   audioplayers: 0.8.0
 
   sqflite: 1.0.0
+
+  screen: any
 
 dev_dependencies:
   flutter_test:
